fix: missing scrollbar style for code blocks

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -84,6 +84,8 @@ h6 {
       border-radius: none;
       padding: 0;
     }
+
+    @include customScrollbar();
   }
 
   blockquote {
